# wit-bindgen-generated-examples

./: .gitignore  README.md  generate.sh
wasmer2/: Cargo.toml
wasmer2/codegen/: mod.rs
wasmer2/codegen/char/: exports.rs  imports.rs
wasmer2/codegen/conventions/: exports.rs  imports.rs
wasmer2/codegen/empty/: exports.rs
wasmer2/codegen/flags/: exports.rs  imports.rs
wasmer2/codegen/floats/: exports.rs  imports.rs
wasmer2/codegen/integers/: exports.rs  imports.rs
wasmer2/codegen/lists/: exports.rs  imports.rs
wasmer2/codegen/many_arguments/: exports.rs  imports.rs
wasmer2/codegen/records/: exports.rs  imports.rs
wasmer2/codegen/resource/: exports.rs  imports.rs
wasmer2/codegen/simple_functions/: exports.rs  imports.rs
wasmer2/codegen/simple_lists/: exports.rs  imports.rs
wasmer2/codegen/small_anonymous/: exports.rs  imports.rs
wasmer2/codegen/smoke/: exports.rs  imports.rs
wasmer2/codegen/strings/: exports.rs  imports.rs
wasmer2/codegen/unions/: exports.rs  imports.rs
wasmer2/codegen/variants/: exports.rs  imports.rs
wasmer2/runtime/flavorful/: exports.rs  imports.rs
wasmer2/runtime/handles/: exports.rs  imports.rs
wasmer2/runtime/invalid/: exports.rs  imports.rs
wasmer2/runtime/lists/: exports.rs  imports.rs
wasmer2/runtime/many_arguments/: exports.rs  imports.rs
wasmer2/runtime/numbers/: exports.rs  imports.rs
wasmer2/runtime/records/: exports.rs  imports.rs
wasmer2/runtime/smoke/: exports.rs  imports.rs
wasmer2/runtime/variants/: exports.rs  imports.rs
wasmer3/: Cargo.toml
wasmer3/runtime/: mod.rs
(+51 files in other folders)
